fix: edit tag for notes
